--- a/Dina/app/src/main/res/values/colors.xml
+++ b/Dina/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="amarilloPrimario">#E6D32C</color>
     <color name="amarilloSecundario">#998B06</color>
     <color name="amornico">#E62C79</color>
+    <color name="blanco">#FFFFFF</color>
 </resources>
