--- a/Dina/app/src/main/res/layout/activity_explicacion_act1.xml
+++ b/Dina/app/src/main/res/layout/activity_explicacion_act1.xml
@@ -19,7 +19,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="272dp"
+        android:layout_height="384dp"
         android:layout_marginTop="80sp"
         android:orientation="horizontal">
 
@@ -32,21 +32,35 @@
 
         <LinearLayout
             android:layout_width="128dp"
-            android:layout_height="260dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:text="texto de prueba" />
+            <ScrollView
+                android:layout_width="230dp"
+                android:layout_height="128dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/iv_myra_notification"
+                app:layout_constraintRight_toLeftOf="@+id/iv_one_way"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/texto"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="left"
+                    android:text="@{itemData.notification.message}"
+                    android:textColor="@android:color/black"
+                    android:textSize="12sp" />
+            </ScrollView>
+            />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imagenquecambia"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                android:layout_height="247dp"
+                android:layout_marginTop="10sp"
+                app:srcCompat="@drawable/gune1_2" />
         </LinearLayout>
 
     </LinearLayout>
