--- a/Dina/app/src/main/res/layout/activity_explicacion_act1.xml
+++ b/Dina/app/src/main/res/layout/activity_explicacion_act1.xml
@@ -10,12 +10,37 @@
     tools:context=".ParaProbarActividades">
 
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="50sp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/amarilloPrimario"
-        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/azulSecundario"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView15"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/azulSecundario"
+            android:scaleType="center"
+            app:srcCompat="@android:drawable/ic_lock_silent_mode" />
+
+        <Switch
+            android:id="@+id/volumen"
+            android:layout_width="wrap_content"
+            android:layout_height="46dp"
+            android:textAlignment="center"
+            android:checked="true"/>
+
+        <ImageView
+            android:id="@+id/imageView16"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
+            tools:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,4 +96,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="40sp"
         android:text="Goazen!" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_lock_silent_mode" />
+
 </LinearLayout>
