--- a/Dina/app/src/main/res/layout/activity_para_probar_actividades.xml
+++ b/Dina/app/src/main/res/layout/activity_para_probar_actividades.xml
@@ -14,7 +14,6 @@
         android:id="@+id/botonacti1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60sp"
         android:text="Actividad 1" />
 
     <Button
@@ -29,5 +28,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Actividad 3" />
-
+    <Button
+        android:id="@+id/botonacti4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Actividad 4" />
+    <Button
+        android:id="@+id/botonacti5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Actividad 5" />
+    <Button
+        android:id="@+id/botonacti6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Actividad 6" />
+    <Button
+        android:id="@+id/botonacti7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Actividad 7" />
+    <Button
+        android:id="@+id/botonacti8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Puzzle final" />
 </LinearLayout>
