--- a/Dina/app/src/main/res/layout/activity_actividad1.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad1.xml
@@ -10,6 +10,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="111dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imagen"
+            android:layout_width="173dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/dina" />
+
+        <TextView
+            android:id="@+id/explicacion"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="89dp"
         android:orientation="horizontal">
 
