--- a/Dina/app/src/main/res/layout/activity_actividad3.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad3.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tvNVidas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="12sp"
