--- a/Dina/app/src/main/res/layout/activity_creditos.xml
+++ b/Dina/app/src/main/res/layout/activity_creditos.xml
@@ -9,10 +9,21 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40sp"
+        android:text="DINA Jokoa"
+        android:textAlignment="center"
+        android:textColor="@color/azulPrimario"
+        android:textSize="34sp"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="217dp"
-        android:layout_marginTop="100sp"
+        android:layout_marginTop="10sp"
         android:orientation="horizontal">
 
         <ImageView
@@ -52,7 +63,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="264dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -67,9 +78,18 @@
             android:layout_width="225dp"
             android:layout_height="166dp"
             android:layout_marginHorizontal="40sp"
-            android:layout_marginTop="120sp"
+            android:layout_marginTop="50sp"
             android:layout_weight="1"
             app:srcCompat="@drawable/cj" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30sp"
+        android:background="@color/azulSecundario"
+        android:text="©DINA\n2022"
+        android:textAlignment="center" />
 
 </LinearLayout>
