--- a/Dina/app/src/main/res/layout/activity_explicacion_act2.xml
+++ b/Dina/app/src/main/res/layout/activity_explicacion_act2.xml
@@ -85,7 +85,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="247dp"
                 android:layout_marginTop="10sp"
-                app:srcCompat="@drawable/juegodeparejas2" />
+                app:srcCompat="@drawable/gune2_1" />
         </LinearLayout>
 
     </LinearLayout>
