--- a/Dina/app/src/main/res/layout/activity_actividad5.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad5.xml
@@ -23,4 +23,105 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
+    <View
+        android:id="@+id/view12"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        android:layout_marginVertical="5dp"
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:layout_editor_absoluteX="87dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/palabraSopa1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SARDINA"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/palabraSopa2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SAREA"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/palabraSopa3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ITSASMUSEO"
+                android:textAllCaps="false"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/palabraSopa8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="BIMECME"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view13"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginVertical="5dp"
+            android:background="@color/black"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            tools:layout_editor_absoluteX="87dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/palabraSopa4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ARRANTZALE"
+                android:textAllCaps="false"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/palabraSopa5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ENKANTE"
+                android:textAllCaps="false"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/palabraSopa6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="KOFRADIA"
+                android:textAllCaps="false"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/palabraSopa9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ASJOPKH"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+
 </LinearLayout>
