--- a/Dina/app/src/main/res/layout/activity_actividad5.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad5.xml
@@ -21,7 +21,8 @@
         android:id="@+id/tvResultadoSopa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <View
         android:id="@+id/view12"
@@ -66,12 +67,12 @@
                 android:textAllCaps="false"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/palabraSopa8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="BIMECME"
-                android:textSize="20sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/palabraSopa8"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="BIMECME"-->
+<!--                android:textSize="20sp" />-->
         </LinearLayout>
 
         <View
@@ -113,12 +114,12 @@
                 android:textAllCaps="false"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/palabraSopa9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="ASJOPKH"
-                android:textSize="20sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/palabraSopa9"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="ASJOPKH"-->
+<!--                android:textSize="20sp" />-->
 
         </LinearLayout>
     </LinearLayout>
