--- a/Dina/app/src/main/res/layout/activity_mapa.xml
+++ b/Dina/app/src/main/res/layout/activity_mapa.xml
@@ -80,5 +80,5 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="25dp"
         android:text="Puzzlea egin"
-        tools:visibility="invisible" />
+        tools:visibility="gone" />
 </RelativeLayout>
