--- a/Dina/app/src/main/res/layout/activity_mapa.xml
+++ b/Dina/app/src/main/res/layout/activity_mapa.xml
@@ -6,14 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".mapa">
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapa"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="7dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
