Botón puzzle final

--- a/Dina/app/src/main/res/layout/activity_mapa.xml
+++ b/Dina/app/src/main/res/layout/activity_mapa.xml
@@ -77,17 +77,22 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/puzzleBtn"
-        android:layout_width="161dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="89dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="239dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="25dp"
-        android:text="Puzzlea egin"
-        tools:visibility="gone" />
+        android:baselineAligned="false"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/puzzleFinal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="80dp"
+            android:layout_weight="1"
+            android:text="Puzzlea osatu"
+            android:visibility="invisible" />
+    </LinearLayout>
 
 </RelativeLayout>
